<resources>
    <string name="search">Search</string>
    <string name="nutrition">Nutrition</string>
    <string name="calories">Calories</string>
    <string name="cal">Cal</string>
    <string name="protein">Protein</string>
    <string name="p">P</string>
    <string name="fat">Fat</string>
    <string name="f">F</string>
    <string name="carbs">Carbs</string>
    <string name="c">C</string>
    <string name="grams">Grams</string>
    <string name="g">g</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="choose_date">Select a date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="all_categories">All categories</string>
</resources>